--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav class="sidebar">
         <div class="profile">
             <img src="img/batman.webp" alt="Minha Foto">
-            <h2>Seu Nome</h2>
-            <p>Web Developer</p>
+            <h2>BATMAN</h2>
+            <p>Juaticeiro Mascarado</p>
         </div>
         <ul class="nav-links">
             <li class="active"><a href="index.html"><i class="fas fa-user"></i> Sobre Mim</a></li>
