--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="active"><a href="index.html"><i class="fas fa-user"></i> Sobre Mim</a></li>
             <li><a href="formacao.html"><i class="fas fa-graduation-cap"></i> Formação</a></li>
             <li><a href="portfolio.html"><i class="fas fa-briefcase"></i> Portfólio</a></li>
-            <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
+            <li><a href="contato.html"><i class="fas fa-envelope"></i> Bat-Sinal</a></li>
         </ul>
         <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
